# Correct-by-Construction

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: wallet_demo.py  wallet_system.yaml
src/arch/: components_db.py  constraint_solver.py  sla_validator.py  topology_generator.py
src/bridge/: interviewer.py  llm_client.py  round_trip.py  spec_builder.py
src/codegen/: go_emitter.py  runtime_assertions.py  sql_generator.py
src/dsl/: ast_nodes.py  spec_loader.py  type_system.py  validator.py
src/formal/: counterexample_finder.py  smt_utils.py  verifier.py  z3_translator.py
src/migration/: data_validator.py  diff_analyzer.py  migration_planner.py  sql_migrator.py
src/testgen/: model_checking.py  property_based.py
templates/: entity.go.j2  main.go.j2  repository.go.j2  service.go.j2
tests/: test_pipeline.py
