[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "correct-by-construction"
version = "0.1.0"
description = "Formal specification to verified code. LLM assists spec refinement; Z3 + templates produce Go."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "examples*"]
